--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ after_success:
   - >
     if [ "$TRAVIS_BRANCH" == "master" ]; then
       echo $DOCKER_PASSWORD | docker login -u="$DOCKER_USERNAME" --password-stdin;
-      make docker-push;
+      make latest;
     fi
